added product code and login page

--- a/login.html
+++ b/login.html
@@ -41,13 +41,13 @@
                                 <a href="index.php"><img src="src/img/brand.svg" alt=""></a>
                             </div>
                             <div class="alert bg-danger alert-danger text-white message" role="alert" style="display: none;">
-                                Please Enter Correct mobile number or password
+                                Please Enter Correct Email Id  or password
                             </div>
                             <h3>Sign In to ThemeKit</h3>
                             <p>Happy to see you again!</p>
                             <form id="signin">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" id="usrname" placeholder="Contact Number" required="">
+                                    <input type="email" class="form-control" id="usrname" placeholder="Emaild Id" required="">
                                     <i class="ik ik-user"></i>
                                 </div>
                                 <div class="form-group">
